MWPW-162943-Fix button text not visible issue on tab (#162)
- Fix button text not visible issue on tab

Resolves: [MWPW-162943](https://jira.corp.adobe.com/browse/MWPW-162943)

Test URLs:

Before:
https://stage--cc--adobecom.hlx.page/products/photoshop/ai?unitylibs=stage
After:
https://stage--cc--adobecom.hlx.page/products/photoshop/ai?unitylibs=MWPW-162943

--- a/unitylibs/core/styles/styles.css
+++ b/unitylibs/core/styles/styles.css
@@ -505,6 +505,10 @@
     color: var(--color-white);
   }
 
+  .unity-enabled .interactive-area.light .unity-action-area .unity-action-btn:focus-visible {
+    color: var(--color-black);
+  }
+
   .continue-in-app-button {
     background-color: var(--highlight-blue);
   }
